--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,21 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2020",
-    "outDir": "dist",
-    "lib": ["ES2020", "DOM"],
-    "sourceMap": true,
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true,
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "typeRoots": ["node_modules/@types"],
-    "types": ["node"]
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "include": ["src/**/*", "src/**/*.scss"],
+  "include": ["src/webview/**/*", "src/webview/**/*.scss", "src/webview/scss.d.ts"],
   "exclude": ["node_modules", ".vscode-test", "dist"],
   "files": ["src/webview/scss.d.ts"]
 }
