--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ai-sdk/azure": "^1.0.9",
+    "@ai-sdk/google": "^1.0.10",
     "@ai-sdk/openai": "1.0.7",
     "@hono/node-server": "1.13.7",
     "ai": "4.0.13",
