--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/diff": "^6.0.0",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
@@ -103,6 +104,7 @@
     "@types/prismjs": "^1.26.5",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
+    "diff": "^7.0.0",
     "prismjs": "^1.29.0",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.3",
