--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "@hono/node-server": "1.13.7",
     "ai": "4.0.13",
     "dotenv": "16.4.5",
-    "hono": "4.6.9"
+    "hono": "4.6.9",
+    "ollama-ai-provider": "^1.1.0"
   },
   "scripts": {
     "dev": "tsx watch src/index.ts",
