--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,20 @@
 .vscode/**
 .vscode-test/**
-backend/**
+backend
+backend/**/*
+node_modules/**
 src/**
+out/**
+dist/**/*.map
+**/*.ts
+!dist/**/*.d.ts
 .gitignore
 .yarnrc
+*.vsix
+.github/**
+.git/**
 vite.config.ts
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
-**/*.ts
+.DS_Store
