--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     "dev": "vite",
     "pretest": "pnpm run build",
     "test": "node ./out/test/runTest.js",
-    "package": "pnpm vsce package --no-dependencies",
-    "publish": "pnpm run package && pnpm vsce publish --no-dependencies --packagePath *.vsix"
+    "package": "pnpm vsce package --no-dependencies --ignoreFile .vscodeignore",
+    "publish": "pnpm vsce publish --no-dependencies --ignoreFile .vscodeignore"
   },
   "devDependencies": {
     "@types/diff": "^6.0.0",
