--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,13 +5,13 @@
     "sourceMap": true,
     "target": "es2022",
     "lib": ["es2022", "dom"],
-    "module": "esnext",
+    "module": "es2022",
+    "moduleResolution": "node",
     "types": ["node"],
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
     "rootDir": "./src",
-    "outDir": "./build",
+    "outDir": "./dist",
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts"]
