--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kiki-mycoder",
   "displayName": "Kiki MyCoder",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publisher": "hfloveyy",
   "description": "AI-powered coding assistant for VS Code",
   "main": "./dist/extension.js",
@@ -80,7 +80,7 @@
   },
   "scripts": {
     "vscode:prepublish": "pnpm run build",
-    "build": "tsc -p ./tsconfig.extension.json && vite build",
+    "build": "cd backend && pnpm run build && cd .. && tsc -p ./tsconfig.extension.json && vite build",
     "watch": "tsc -watch -p ./tsconfig.extension.json",
     "dev": "vite",
     "pretest": "pnpm run build",
@@ -89,6 +89,9 @@
     "publish": "pnpm vsce publish --no-dependencies --ignoreFile .vscodeignore"
   },
   "devDependencies": {
+    "@ai-sdk/azure": "^1.0.0",
+    "@ai-sdk/google": "^1.0.0",
+    "@ai-sdk/openai": "^1.0.0",
     "@types/diff": "^6.0.0",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.14",
