--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,7 @@
     "dev": "tsx watch src/index.ts",
     "curl": "curl -i -X POST http://localhost:8080",
     "type-check": "tsc --noEmit",
-    "build": "rm -rf dist && tsc -p ./tsconfig.json && node build.js && mkdir -p ../dist/backend && cp dist/index.bundle.mjs ../dist/backend/ && cp src/system-prompt.txt src/config*.json ../dist/backend/"
+    "build": "rm -rf ../dist && tsc -p ./tsconfig.json && node build.js && mkdir -p ../dist/backend && cp dist/index.bundle.mjs ../dist/backend/ && cp src/system-prompt.txt src/config*.json ../dist/backend/"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
